--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: go
-
 go:
+    - tip
     - go1.5
     - go1.6
     - go1.7
     - go1.8
-
+before_install:
+  - go get github.com/mattn/goveralls
+script:
+  - $HOME/gopath/bin/goveralls -service=travis-ci
 go_import_path: github.com/esemplastic/unis
