--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: go
+sudo: false
+dist: trusty
 go:
-    - tip
-    - go1.5
-    - go1.6
-    - go1.7
-    - go1.8
+  - 1.7
+  - 1.8
+  - tip
 before_install:
   - go get github.com/mattn/goveralls
+  - go get golang.org/x/tools/cmd/cover
 script:
-  - $HOME/gopath/bin/goveralls -service=travis-ci
-go_import_path: github.com/esemplastic/unis
+  - $HOME/gopath/bin/goveralls -repotoken 8lMA45pznwDRJhGWY0ysJkanbzE8FLVD9
+  - go test -race -v .
