--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: go
-sudo: false
 go:
-  - go1.7
-  - go1.8
-  - tip
+    - go1.7
+    - go1.8
+    - tip
+go_import_path: github.com/esemplastic/unis
 before_install:
-  - go get github.com/mattn/goveralls
-  - go get golang.org/x/tools/cmd/cover
+    - go get github.com/mattn/goveralls
+    - go get golang.org/x/tools/cmd/cover
 script:
-  - $HOME/gopath/bin/goveralls -repotoken 8lMA45pznwDRJhGWY0ysJkanbzE8FLVD9
-  - go test -race -v .
+    - $HOME/gopath/bin/goveralls -repotoken 8lMA45pznwDRJhGWY0ysJkanbzE8FLVD9 -service=travis-ci
+    - go test -race -v .
